tokio-fsm-macros/tests/ui/unreachable_timeout.stderr
error: State 'Failed' is unreachable from initial state 'Idle'
  --> tests/ui/unreachable_timeout.rs:14:54
   |
14 |     async fn handle_timeout(&mut self) -> Transition<Failed> {
   |                                                      ^^^^^^

warning: unused import: `Transition`
 --> tests/ui/unreachable_timeout.rs:1:17
  |
1 | use tokio_fsm::{Transition, fsm};
  |                 ^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
